chore: sort by fee/tvl by default
